# MedSAM2

./: README.md  app.py  build.py  download.sh  eff_medsam2_infer_CT_lesion_npz_recist.py  gitignore  medsam2_infer_3D_CT.py  medsam2_infer_CT_lesion_npz_recist.py  medsam2_infer_video.py  multi_node_train.sh  pyproject.toml  setup.py  single_node_train_eff_medsam2_FLARE25.sh  single_node_train_medsam2.sh
checkpoints/: README.md
data/RECIST_train_npz/: CT_Lesion_000001_02_01_008-023.npz  CT_Lesion_000002_03_01_035-047.npz  CT_Lesion_000009_03_01_036-048.npz  CT_Lesion_000010_01_01_078-090.npz  CT_Lesion_000015_01_01_081-093.npz  CT_Lesion_000015_01_01_103-115.npz
examples/: infer_CT_LUNA25.py
notebooks/: MedSAM2_Inference_Video.ipynb  MedSAM2_inference_CT_Lesion.ipynb
sam2/: build_sam.py
sam2/configs/: sam2.1_hiera_tiny_finetune512.yaml
training/: train.py  trainer.py
training/dataset/: transforms.py  vos_raw_dataset.py  vos_segment_loader.py
training/model/: efficienttam.py
